[package]
name = "kingnetworktools"
version = "1.0.5"
description = "KingNetworkTools - analisador de rede completo com Tauri v2"
authors = ["Clebson-Torres"]
edition = "2021"

[lib]
name = "kingnetworktools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
local-ip-address = "0.6"
tokio = { version = "1", features = ["rt"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
chrono = "0.4"
regex = "1"
curl = "0.4"
